--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -6,9 +6,14 @@
   </ion-navbar>
 </ion-header>
 
-<ion-content padding>
-  The world is your oyster.
-  <p>
-    If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will be your guide.
-  </p>
+<ion-content text-center>
+  <div #map id="map" style="height: 100%"></div>
 </ion-content>
+<ion-footer>
+  <button ion-button
+          no-margin large
+          full color="secondary"
+          (click)="addMarker()">
+    Add Marker
+  </button>
+</ion-footer>
