feat(component): add ion-maps component

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -7,7 +7,7 @@
 </ion-header>
 
 <ion-content text-center>
-  <div #map id="map" style="height: 100%"></div>
+  <ion-maps></ion-maps>
 </ion-content>
 <ion-footer>
   <button ion-button
