--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,14 +1,14 @@
 <ion-content padding text-center>
   <h2>Interactive map</h2>
-  <ion-maps lat="40.714728" lng="-73.998672">
+  <ion-maps mapStyle="military" lat="40.714728" lng="-73.998672">
     <ion-marker lat="40.718217" lng="-73.998284" label="Y"></ion-marker>
-    <ion-marker lat="40.718217" lng="-73.993434" title="OH YEA" icon="http://cdn.sstatic.net/Sites/stackexchange/img/favicon.ico"></ion-marker>
+    <ion-marker lat="40.718217" lng="-73.993434" title="OH YEA" iconUrl="http://icons.iconarchive.com/icons/paomedia/small-n-flat/48/map-marker-icon.png"></ion-marker>
   </ion-maps>
 
   <h2>Static map</h2>
-  <ion-static-maps lat="40.714728" lng="-73.998672">
+  <ion-static-maps mapStyle="silver" lat="40.714728" lng="-73.998672">
     <ion-marker lat="40.718217" lng="-73.998284" color="yellow" label="Y"></ion-marker>
-    <ion-marker lat="40.718217" lng="-73.993434" title="OH YEA" icon="http://cdn.sstatic.net/Sites/stackexchange/img/favicon.ico"></ion-marker>
+    <ion-marker lat="40.718217" lng="-73.993434" title="OH YEA" iconUrl="http://icons.iconarchive.com/icons/paomedia/small-n-flat/48/map-marker-icon.png"></ion-marker>
   </ion-static-maps>
 </ion-content>
 <ion-footer>
