feat(ion-maps): add htmlMarker with custom css (working)

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,13 +1,13 @@
 <ion-content padding text-center>
   <h2>Interactive map</h2>
   <ion-maps mapStyle="military" lat="40.714728" lng="-73.998672">
-    <ion-marker lat="40.718217" lng="-73.998284" label="Y"></ion-marker>
+    <ion-marker customHTML="<div class='geolocationInner'></div>" lat="40.718217" lng="-73.998284" label="Y"></ion-marker>
     <ion-marker lat="40.718217" lng="-73.993434" title="OH YEA" iconUrl="http://icons.iconarchive.com/icons/paomedia/small-n-flat/48/map-marker-icon.png"></ion-marker>
   </ion-maps>
 
   <h2>Static map</h2>
   <ion-static-maps mapStyle="silver" lat="40.714728" lng="-73.998672">
-    <ion-marker lat="40.718217" lng="-73.998284" color="yellow" label="Y"></ion-marker>
+    <ion-marker  lat="40.718217" lng="-73.998284" color="yellow" label="Y"></ion-marker>
     <ion-marker lat="40.718217" lng="-73.993434" title="OH YEA" iconUrl="http://icons.iconarchive.com/icons/paomedia/small-n-flat/48/map-marker-icon.png"></ion-marker>
   </ion-static-maps>
 </ion-content>
